--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "drizzle-basic",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Basic use drizzle orm with sqlite3 database built with vite-node",
+  "main": "src/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite-node src/main.ts"
   },
   "keywords": [],
